# ros2_humble

./: .gitignore  README.md
adv_ws/src/c_msg_coms/: CMakeLists.txt
adv_ws/src/c_msg_coms/src/: publisher.cpp  suscriber.cpp
adv_ws/src/c_srv_coms/: CMakeLists.txt
adv_ws/src/c_srv_coms/src/: client.cpp  service.cpp
adv_ws/src/install/: local_setup.sh  setup.sh
adv_ws/src/install/c_msg_coms/lib/c_msg_coms/: listener  talker
adv_ws/src/install/c_msg_coms/share/c_msg_coms/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
adv_ws/src/install/c_srv_coms/lib/c_srv_coms/: client  server
adv_ws/src/install/c_srv_coms/share/c_srv_coms/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
adv_ws/src/install/my_interface/share/my_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
adv_ws/src/install/p_srv_coms/lib/p_srv_coms/: client  server
adv_ws/src/install/p_srv_coms/share/p_srv_coms/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
adv_ws/src/interface/: CMakeLists.txt  package.xml
adv_ws/src/interface/srv/: Boolean.srv
adv_ws/src/log/: latest_build
adv_ws/src/p_srv_coms/: setup.cfg  setup.py
adv_ws/src/p_srv_coms/p_srv_coms/: server.py
adv_ws/src/service/: CMakeLists.txt  package.xml
esp_ws/src/esp_interface/: CMakeLists.txt  package.xml
esp_ws/src/esp_interface/srv/: AuzaGuillermo.srv
esp_ws/src/ros_esp/: package.xml  setup.cfg  setup.py
esp_ws/src/ros_esp/ros_esp/: client.py  server.py
intermidiate_ws/src/service/: package.xml
mechanical_ws/launch/: view_robot.py
mechanical_ws/src/c_moveit/: CMakeLists.txt  package.xml
mechanical_ws/src/c_moveit/src/: hello_moveit.cpp
mechanical_ws/src/panda/: .setup_assistant  CMakeLists.txt  package.xml
mechanical_ws/src/panda/config/: kinematics.yaml  moveit_controllers.yaml  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
mechanical_ws/src/panda/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mechanical_ws/src/py_mechanical/: package.xml  setup.cfg  setup.py
mechanical_ws/src/urdf_robot/: CMakeLists.txt  package.xml
mechanical_ws/src/urdf_robot/launch/: view_launch.py
mechanical_ws/src/urdf_robot/urdf/: my_robot.urdf  panda.urdf
mechanical_ws/urdf/: my_robot.urdf
mechanical_ws/urdf_robot/: CMakeLists.txt
mechanical_ws/urdf_robot/launch/: view_launch.py
mechanical_ws/urdf_robot/urdf/: my_robot.urdf  robot_test.urdf
my_ws/install/: local_setup.sh  setup.sh
my_ws/install/c_arith/lib/c_arith/: sum_array
my_ws/install/c_arith/share/c_arith/: package.sh  package.zsh
my_ws/install/c_int/lib/c_int/: pub_array  sub_array
my_ws/install/c_int/share/c_int/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/c_int/share/c_int/launch/: _launch.py
my_ws/install/c_pckg/lib/c_pckg/: listener  talker  tranceiver
my_ws/install/c_pckg/share/c_pckg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/c_pckg/share/c_pckg/cmake/: c_pckgConfig.cmake
my_ws/install/p_int/lib/p_int/: array_listen  array_talk
my_ws/install/p_int/share/p_int/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
my_ws/install/p_pckg/lib/p_pckg/: listener  talker  tranceiver
my_ws/install/p_pckg/share/p_pckg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
my_ws/log/: latest_build
my_ws/src/c_arith/: CMakeLists.txt
my_ws/src/c_arith/src/: sum.cpp
my_ws/src/c_int/: CMakeLists.txt
my_ws/src/c_int/src/: array_pub.cpp  array_sub.cpp
my_ws/src/c_pckg/: CMakeLists.txt
my_ws/src/c_pckg/src/: Rotation.cpp  publisher_member_function.cpp  subscriber_member_function.cpp  tranceiver_member_function.cpp
my_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ws/src/log/: latest_build
my_ws/src/my_interface/: CMakeLists.txt  package.xml
my_ws/src/my_interface/msg/: my_msgs.msg
my_ws/src/p_int/: package.xml  setup.cfg  setup.py
my_ws/src/p_int/p_int/: arr_pub.py  arr_sub.py
my_ws/src/p_msg/: package.xml  setup.cfg  setup.py
my_ws/src/p_msg/launch/: _launch.py
my_ws/src/p_msg/p_msg/: publish_msg.py  suscribe_msg.py
my_ws/src/p_pckg/: setup.cfg  setup.py
my_ws/src/p_pckg/launch/: _launch.py
my_ws/src/p_pckg/p_pckg/: subscriber_member_function.py
parcial_ws/src/matrix_service/: package.xml  setup.cfg  setup.py
parcial_ws/src/matrix_service/matrix_service/: matrix_client.py  matrix_server.py
parcial_ws/src/parcial_interface/: CMakeLists.txt  package.xml
parcial_ws/src/parcial_interface/srv/: Matrix.srv
parcial_ws/src/sensor_motor/: CMakeLists.txt  package.xml
parcial_ws/src/sensor_motor/src/: motor_do.cpp  sensor_talk.cpp
(+53 files in other folders)
